@@ -53,6 +53,8 @@ git-annex (4.20130418) UNRELEASED; urgency=low
     when you or the friend have multiple reposotories on an XMPP account.
     Note that XMPP pairing with your own devices still pairs with all
     repositories using your XMPP account.
+  * assistant: Fix bug that could cause incoming pushes to not get
+    merged into the local tree.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Apr 2013 16:22:48 -0400
 
